unpackaged/main/default/objects/Key_Account_Plan__c/Key_Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Top 5 Account Plan</label>
    <nameField>
        <displayFormat>KAP-{000}</displayFormat>
        <label>Top 5 Account Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top 5 Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>