unpackaged/main/default/objects/Key_Account_Plan__c/fields/Account_Update__c.field-meta.xml
<CustomField>
    <fullName>Account_Update__c</fullName>
    <label>Quarterly Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>