unpackaged/main/default/objects/Key_Account_Plan__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Key_Account_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>