unpackaged/main/default/objects/Key_Account_Plan__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <formula>Hospital__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital</label>
    <type>Text</type>
</CustomField>