unpackaged/main/default/objects/Key_Account_Plan__c/fields/Planned_Account_Tactics__c.field-meta.xml
<CustomField>
    <fullName>Planned_Account_Tactics__c</fullName>
    <label>Business Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>