unpackaged/main/default/objects/Key_Account_Plan__c/fields/Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Target</label>
    <referenceTo>Sales_by_year__c</referenceTo>
    <relationshipName>Key_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>