unpackaged/main/default/objects/Key_Account_Plan__c/fields/Total_2017_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_2017_Sales__c</fullName>
    <formula>Sales_Target__r.Total_2017_Sales__c</formula>
    <label>Previous Year Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>