unpackaged/main/default/objects/Key_Account_Plan__c/fields/Total_2018_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_2018_Sales__c</fullName>
    <formula>Sales_Target__r.Total_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 Actual Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>