unpackaged/main/default/objects/Key_Account_Plan__c/fields/X2018_target__c.field-meta.xml
<CustomField>
    <fullName>X2018_target__c</fullName>
    <formula>Sales_Target__r.Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>