unpackaged/main/default/objects/Key_Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hospital__c</columns>
    <columns>Account_Update__c</columns>
    <columns>Planned_Account_Tactics__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Gemma Thomas</value>
    </filters>
    <label>All</label>
</ListView>